# IES-device-plugin-project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  env.cmake  main.cpp
deviceplugin/: commandproviderfactory.cpp  commandproviderfactory.h  connectionmanager.cpp  connectionmanager.h  consts.h  dataprovider.cpp  dataprovider.h  enums.h  pluginproviderfactory.cpp  pluginproviderfactory.h  pluginserviceprovider.cpp  pluginserviceprovider.h  serializer.cpp  serializer.h  viewprovider.cpp  viewprovider.h  viewproviderfactory.cpp  viewproviderfactory.h
deviceplugin/creationpart/controller/: factorycontroller.cpp  factorycontroller.h
deviceplugin/creationpart/creationpartfactory/impl1/: testplugincreationpartfactoryimpl1.cpp  testplugincreationpartfactoryimpl1.h
deviceplugin/creationpart/usecase/: factoryusecase.cpp  factoryusecase.h
deviceplugin/creationpart/view/: factoryview.cpp  factoryview.h
deviceplugin/creationpart/view/impls/: factoryviewimpl1.cpp  factoryviewimpl1.h  factoryviewimpl2.cpp  factoryviewimpl2.h
deviceplugin/entity/: deviceentity.h  devicetypes.h
deviceplugin/entity/factories/: deviceentityfactoryimpl1.cpp  deviceentityfactoryimpl1.h
deviceplugin/entity/impls/: deviceentityimpl.cpp  deviceentityimpl.h
deviceplugin/entity/impls/standaloneimpl1/: deviceentityconnectedstatestandaloneimpl1.cpp  deviceentityconnectedstatestandaloneimpl1.h  deviceentityfactorystandaloneimpl1.cpp  deviceentityfactorystandaloneimpl1.h  deviceentitynotconnectedstatestandaloneimpl1.cpp  deviceentitynotconnectedstatestandaloneimpl1.h  deviceentityregcardimpl1.cpp  deviceentityregcardimpl1.h
deviceplugin/managementpart/usecase/: usecasefactory.cpp  usecasefactory.h
deviceplugin/managementpart/usecase/channel/: getchanneldelayusecase.cpp  getchanneldelayusecase.h  getchannelenabledstatususecase.cpp  getchannelenabledstatususecase.h  getchannelinvertedstatususecase.cpp  getchannelinvertedstatususecase.h  getchannelnameusecase.cpp  getchannelnameusecase.h  getchannelscountusecase.cpp  getchannelscountusecase.h  getchannelstartmodeusecase.cpp  getchannelstartmodeusecase.h  getchannelstartsourceusecase.cpp  getchannelstartsourceusecase.h  getchannelwidthusecase.cpp  getchannelwidthusecase.h  setchanneldelayusecase.cpp  setchanneldelayusecase.h  setchannelenabledstatususecase.cpp  setchannelenabledstatususecase.h  setchannelinvertedstatususecase.cpp  setchannelinvertedstatususecase.h  setchannelnameusecase.cpp  setchannelnameusecase.h  setchannelstartmodeusecase.cpp  setchannelstartmodeusecase.h  setchannelstartsourceusecase.cpp  setchannelstartsourceusecase.h  setchannelwidthusecase.cpp  setchannelwidthusecase.h
deviceplugin/managementpart/usecase/innerstart/: getinnerstartperiodusecase.cpp  getinnerstartperiodusecase.h
deviceplugin/managementpart/view/: deviceviewpresenter.cpp  deviceviewpresenter.h
deviceplugin/managementpart/view/impls/: deviceviewpresenterimpl1.cpp  deviceviewpresenterimpl1.h
deviceplugin/services/callbacksubscriptions/: devicecallbacksubscriptionfactory.cpp  devicecallbacksubscriptionfactory.h  deviceentitypoll.cpp  deviceentitypoll.h  ideviceentitypoll.cpp  ideviceentitypoll.h
deviceplugin/services/serializers/: devicedtoserializer.cpp  devicedtoserializer.h  dtodataloader.h  dtodataparser.h
deviceplugin/stylesheets/: default.h
deviceplugin/widgets/epss/basic/: channelbutton.cpp  channelbutton.h
deviceplugin/widgets/epss/composed/: channelsettings.cpp  channelsettings.h  fullchannelsettings.cpp  fullchannelsettings.h  innerstartsettingswidget.cpp  innerstartsettingswidget.h  powerblockinfo.cpp  powerblockinfo.h  rfmodulewidget.cpp  rfmodulewidget.h  syncmodulewidget.cpp  syncmodulewidget.h
deviceplugin/widgets/t831/: comboboxwithlabel.cpp  comboboxwithlabel.h  fullchannelsettingst831.cpp  fullchannelsettingst831.h  statebuttonwithlabel.cpp  statebuttonwithlabel.h  t831settingswidget.cpp  t831settingswidget.h
deviceplugin/widgets/t831/channelsbox/: channelsboxv2.cpp  channelsboxv2.h  channelscount12strategy.cpp  channelscount12strategy.h  channelscount24strategy.cpp  channelscount24strategy.h  channelscount8strategy.cpp  channelscount8strategy.h  channelscountstrategy.cpp  channelscountstrategy.h
lib/include/callbacks/: export.h  export_shared.h
lib/include/callbacks/models/: valuecallbacks.h
lib/include/modbus/: modbus.h
lib/include/modbuswrappers/: modbuswrapper.h
lib/include/modbuswrappers/mocks/: modbuswrappermock1.h  modbuswrappermock2.h  modbuswrappermockfactory.h
lib/include/modbuswrappers/modbusasyncclientwrapper/: modbusasyncclientwrapper.h  modbusasyncclientwrapper2.h  modbusasyncclientwrapperfactory.h  modbuswrapperpoll.h
lib/include/modbuswrappers/modbusclientwrapper/: modbusclientdividablewrapper.h  modbusclientdividablewrapperfactory.h  modbusclientwrapper.h  modbusclientwrapperconnectedstate.h  modbusclientwrapperdisconnectedstate.h  modbusclientwrapperfactory.h
lib/include/modbuswrappers/modbuspostponedwritewrapper/: modbuspostponedwritewrapper.h  modbuspostponedwritewrapperfactory.h
lib/include/modbuswrappers/modbuswrappermodbusiddecorator/: modbusclientmodbusiddecorator.h  modbusclientmodbusiddecoratorfactory.h
lib/include/modbuswrappers/storages/: modbuswrapperstorageimpl1.h
lib/include/plugin/: export.h  export_shared.h
lib/include/plugin/deviceplugins/: commandprovider.h  connectionmanager.h  dataprovider.h  devicepackfactory.h  pluginfactory.h  pluginprovider.h  pluginproviderfactory.h  serializer.h  serviceprovider.h  (+2 more)
lib/include/widgets/: consts.h  enums.h  export.h  export_shared.h  services.h  utils.h
lib/lib/: callbacks.lib  callbacksd.lib  modbus.lib  modbusd.lib  modbuswrappers.lib  modbuswrappersd.lib  plugin.lib  plugind.lib  threadpooling.lib  threadpoolingd.lib  utils.lib  utilsd.lib  widgets.lib  widgetsd.lib
test/: abstracttablemodelwrapper.cpp  abstracttablemodelwrapper.h  channelmodel.cpp  channelmodel.h  channeltableview.cpp  channeltableview.h  qtmodelnotifier.cpp  qtmodelnotifier.h  tablemodel.cpp  tablemodel.h  testlanwidget.cpp  testlanwidget.h
(+87 files in other folders)
